<resources>
    <string name="app_name">ClusterChat</string>
    <string name="send">SEND</string>
    <string name="file">FILE</string>
    <string name="looking_for_devices">Looking for devices…</string>
    <string name="enter_message">Enter message</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="defaultName">Name</string>
    <string name="defaultAddress">ff:ff:ff:ff:ff:ff</string>
    <string name="emptyMessageNumber">0</string>
</resources>
