<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:orientation="vertical">
            <TextView
                android:id="@+id/contact_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textSize="17sp"
                android:text="@string/defaultName" />

            <TextView
                android:id="@+id/contact_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/contact_name"
                android:text="@string/defaultAddress" />

        </LinearLayout>

        <TextView
            android:id="@+id/new_messages"
            android:visibility="invisible"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:layout_marginEnd="15dp"
            android:text="@string/emptyMessageNumber"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:background="@drawable/circle"

            />

    </LinearLayout>

</LinearLayout>