<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycler_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    tools:context="il.ac.tau.cs.mansur.kollmann.clusterchat.ChatActivity">

<android.support.v7.widget.RecyclerView
    android:id="@+id/reyclerview_message_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/layout_chatbox"
    android:stackFromBottom="true"
    android:layout_marginBottom="4dp"
    />

<!-- A horizontal line between the chatbox and RecyclerView -->
<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:background="#dfdfdf"
    android:layout_marginBottom="0dp"
    app:layout_constraintBottom_toTopOf="@+id/layout_chatbox" />

<LinearLayout
    android:id="@+id/layout_chatbox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:minHeight="48dp"
    android:background="#ffffff"
    app:layout_constraintBottom_toBottomOf="parent" >

    <EditText
        android:id="@+id/edittext_chatbox"
        android:hint="@string/enter_message"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:maxLines="6"/>

    <Button
        android:id="@+id/button_chatbox_send"
        android:text="@string/send"
        android:textSize="14sp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:focusable="true" />

    <Button
        android:id="@+id/button_send_file"
        android:drawableStart="@drawable/attachme"
        android:text="@string/file"
        android:textSize="14sp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_gravity="bottom"
        android:focusable="true" />

</LinearLayout>

</android.support.constraint.ConstraintLayout>

